--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "find-closest": "^2.0.1",
     "lodash-es": "^4.17.10",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-intl": "^2.4.0",
     "react-scripts": "1.1.4",
-    "react-swipeable": "^4.3.0"
+    "react-swipeable": "^4.3.0",
+    "react-transition-group": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
