Add instructions, finish WeatherSummary

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,2 @@
-NODE_PATH=src
-REACT_APP_OPENWEATHERMAP_API_KEY=1234
-REACT_APP_DARK_SKY_API_KEY=1234
+NODE_PATH=src #required
+REACT_APP_DARK_SKY_API_KEY=123456
