Add loader and error handling

--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
     "flexbox-react": "^4.4.0",
-    "jsonp": "^0.2.1",
+    "jsonp-promise": "^0.1.2",
     "lodash-es": "^4.17.10",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
